# pdequinox

./: .pre-commit-config.yaml  LICENSE.txt  README.md  mkdocs.yml  parameter_count_and_receptive_field.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_docs.yml  pre_commit.yml  publish.yml  test.yml
docs/: index.md  more_details.md  requirements.txt
docs/api/: arch_constructors.md  block_factories.md  blocks.md  conv.md  sample_data.md  utils.md
docs/examples/: parameter_count_and_receptive_field.ipynb
examples/: seed_parallel_training.ipynb  train_unet_as_poisson_solver.ipynb
pdequinox/: __init__.py  _base_block_net.py  _base_u_net.py  _block_net.py  _conv.py  _convnet.py  _hierarchical.py  _mlp.py  _resnet.py  _sample_data.py  _sequential.py  _u_net.py  _unet.py  _utils.py  blocks.py  channel_adjustment.py  conv.py  convnet.py  legacy_unet.py  mlp.py  new_physics_conv.py  periodic_conv.py  physics_conv.py  pointwise_linear_conv.py  resnet.py  spectral_conv.py  unet.py  utils.py
pdequinox/arch/: __init__.py  _classic_fno.py  _classic_res_net.py  _classic_u_net.py  _conv_net.py  _dilated_res_net.py  _fno.py  _mlp.py  _modern_res_net.py  _modern_u_net.py
pdequinox/blocks/: __init__.py  _base_block.py  _classic_double_conv_block.py  _classic_res_block.py  _classic_spectral_block.py  _dilated_res_block.py  _linear_channel_adjust_block.py  (+13 more)
tests/: requirements.txt  test_boundary_handling.py  test_count_parameters.py  test_instantiate.py  test_receptive_field.py  test_spectral_conv.py  test_unet_translation.py  test_with_dummy_input.py
(+11 files in other folders)
